2011-10-10  Alice Boxhall  <aboxhall@chromium.org>

        Added myself as a committer.

        * Scripts/webkitpy/common/config/committers.py:

2011-10-12  Adam Barth  <abarth@webkit.org>

        _run_tests is a confusing variable name in webkitpy
        https://bugs.webkit.org/show_bug.cgi?id=69971

        Reviewed by Eric Seidel.

        Eric and I thought this was a function.

        * Scripts/webkitpy/tool/bot/earlywarningsystemtask.py:

2011-10-12  Tony Chang  <tony@chromium.org>

        Fix test-webkitpy after r97307 and r97293.

        * Scripts/webkitpy/layout_tests/port/chromium.py: options.time_out_ms
          is None during tests so add back the check.
        * Scripts/webkitpy/layout_tests/port/chromium_win_unittest.py: The
          output directory is now build/Debug.

2011-10-12  Tony Chang  <tony@chromium.org>

        [chromium] remove old build dirs on chromium-win
        https://bugs.webkit.org/show_bug.cgi?id=69961

        Reviewed by Adam Barth.

        * Scripts/webkitpy/layout_tests/port/chromium_win.py: Output is now
          always in build and never in chrome or webkit.

2011-10-12  Dimitri Glazkov  <dglazkov@chromium.org>

        garden-o-matic's "Expect Failure" button does not work correctly, so we should remove it until the plumbing is fixed to avoid landmines.
        https://bugs.webkit.org/show_bug.cgi?id=69954

        Also renamed the action and associated event name to address an FIXME.

        Reviewed by Adam Barth.

        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/controllers.js: Renamed event name.
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/ui/actions.js: Renamed the action.
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/ui/results.js: Removed action temporarily.

2011-10-12  Tony Chang  <tony@chromium.org>

        stop spamming 'stopping test driver timed out, killing it' when running rwt